[package]
name = "druid-xi"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git"}
druid-shell = { git = "https://github.com/linebender/druid.git"}

serde = "1.0"
serde_json = "1.0"

[dependencies.xi-core-lib]
branch = "master"
git = "https://github.com/xi-editor/xi-editor"

[dependencies.xi-rpc]
branch = "master"
git = "https://github.com/xi-editor/xi-editor"

[dependencies.xi-trace]
branch = "master"
git = "https://github.com/xi-editor/xi-editor"
features = ["chrome_trace_event"]
